*SVN*

* Expanded :method option in FormHelper#form_tag to allow for verbs other than GET and POST by automatically creating a hidden form field named _method, which will simulate the other verbs over post [DHH]

* Added :method option to UrlHelper#link_to, which allows for using other verbs than GET for the link. This replaces the :post option, which is now deprecated. Example: link_to "Destroy", person_url(:id => person), :method => :delete [DHH]

* follow_redirect doesn't complain about being redirected to the same controller. #5153 [dymo@mk.ukrtelecom.ua]

* Add layout attribute to response object with the name of the layout that was rendered, or nil if none rendered. [Kevin Clark kevin.clark@gmail.com]

* Fix NoMethodError when parsing params like &&. [Adam Greenfield]

* Fix flip flopped logic in docs for url_for's :only_path option. Closes #4998. [esad@esse.at]

* form.text_area handles the :size option just like the original text_area (:size => '60x10' becomes cols="60" rows="10").  [Jeremy Kemper]

* Excise ingrown code from FormOptionsHelper#options_for_select. #5008 [anonymous]

* Small fix in routing to allow dynamic routes (broken after [4242]) [Rick]

    map.connect '*path', :controller => 'files', :action => 'show'

* Replace alias method chaining with Module#alias_method_chain. [Marcel Molina Jr.]

* Replace Ruby's deprecated append_features in favor of included. [Marcel Molina Jr.]

* Use #flush between switching from #write to #syswrite. Closes #4907. [Blair Zajac <blair@orcaware.com>]

* Documentation fix: integration test scripts don't require integration_test. Closes #4914. [Frederick Ros <sl33p3r@free.fr>]

* ActionController::Base Summary documentation rewrite. Closes #4900. [kevin.clark@gmail.com]

* Fix text_helper.rb documentation rendering. Closes #4725. [Frederick Ros]

* Fixes bad rendering of JavaScriptMacrosHelper rdoc (closes #4910) [Frederick Ros]
